# ibkr-gap-vwap-reclaim-bot

./: .env.example  .gitignore  CLAUDE_CHEATSHEET.md  README.md  ROADMAP.md  pyproject.toml
config/: exclusions.yaml  risk.yaml  schedule.yaml  strategy.yaml  universe.yaml
scripts/: run_scan.sh  run_session.sh
src/: cli.py
src/clients/: contracts.py  fetch.py  safety.py  scanner.py  tws_client.py
src/config/: settings.py
src/execution/: order_builder.py  order_submit.py  position_monitor.py  trade_manager.py
src/indicators/: gap.py  rsi.py  vwap.py
src/jobs/: run_session.py  scan_candidates.py
src/models/: domain.py
src/reporting/: daily_report.py  trade_logger.py
src/storage/: db.py  repositories.py
src/strategy/: risk_gate.py  setup_detector.py  universe_filter.py
src/utils/: logging.py  time_utils.py
tests/: conftest.py  test_indicators.py  test_risk_gate.py  test_storage.py  test_strategy.py  test_universe_filter.py
