[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ibkr-gap-vwap-reclaim-bot"
version = "0.1.0"
description = "Rule-driven IBKR paper-trading bot for gap-down VWAP reclaim setups"
requires-python = ">=3.9"
dependencies = [
    "pydantic>=2.5",
    "pydantic-settings>=2.1",
    "pyyaml>=6.0",
    "ib_insync>=0.9.86",
    "pandas>=2.1",
    "numpy>=1.24",
    "typer[all]>=0.9",
    "rich>=13.0",
    "python-dotenv>=1.0",
    "eval_type_backport>=0.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "ruff>=0.3",
]

[project.scripts]
gap-vwap-bot = "src.cli:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.ruff]
target-version = "py39"
line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
